# exp-gh-copilot-compare

./: .gitignore  PROMPT-ROUNDS.md  README.md  download.py  pyproject.toml  upload.py
.github/: copilot-instructions.md
data/: export.lite.csv
