[project]
name = "cgm-5625"
version = "0.0.1"
description = "A collection of python scripts to achieve a one-off task of downloading and uploading a list of images"
dependencies = [
    "requests>=2.31,<3",
    "python-dotenv>=1.0,<2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
